--- a/config/samples/webapp_v1_simpleapp.yaml
+++ b/config/samples/webapp_v1_simpleapp.yaml
@@ -3,5 +3,5 @@ kind: SimpleApp
 metadata:
   name: simpleapp-sample
 spec:
-  # Add fields here
-  foo: bar
+  image: nginx:latest
+  hostname: example.com
