--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -23,13 +23,22 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ github.token }}
 
-      - name: Set docker tag to build
-        id: dockertag
-        run: echo "::set-output name=dockertag::ghcr.io/${{ github.repository }}:${{ github.sha }}"
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          # list of Docker images to use as base name for tags
+          # @TODO Add dockerhub in the future
+          images: |
+            ghcr.io/${{ github.repository }}
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=raw,value=latest
+            type=sha
 
       - name: Build Docker Container
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: ${{ steps.dockertag.outputs.dockertag }}
+          tags: ${{ steps.meta.outputs.tags }}
